cncf/flagger/apps/httpbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: default
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000  
        supplementalGroups: [2000]
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: httpbin
        image: bjd145/httpbin:1087
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false  
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "64Mi"
            cpu: "0.25"
        volumeMounts:
        - mountPath: /usr/tmp
          name: tmp-volume
      volumes:
      - name: tmp-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: httpbinsvc
  namespace: default
spec:
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name:  httpbin-bjdazure-tech-vs
  namespace: default
spec:
  hosts:
  -  httpbin.bjdazure.tech
  gateways:
  -  default-bjdazure-tech-gw
  http:
  - route:
    - destination:
        host: httpbinsvc
        port:
          number: 80
